✨feat:/ 修改页面布局

--- a/blog4/app/views/blogs/index.html.erb
+++ b/blog4/app/views/blogs/index.html.erb
@@ -7,13 +7,15 @@
 <div class=“blogs">
 <% @blogs.each do |blog| %>
 <div class=”blog”>
-    <%= link_to blog.title, blog %>,  Posted 
-    <%= time_ago_in_words blog.created_at %> ago. | 
+    <%= link_to blog.title, blog %>
+    <br>
+    Posted 
+    <%= time_ago_in_words blog.created_at %> ago. |   
     <%= link_to 'Edit', edit_blog_path(blog) %>
     <%= link_to 'Destroy', blog, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
     <pre><%= blog.content %></pre>
 </div>
-<% end %>	
+  <% end %>	
 </div>
 
 <%= link_to "New blog", new_blog_path %>
